<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="distance">Enter distance (meter)</string>
    <string name="time">Enter time (second)</string>
    <string name="clear">CLEAR</string>
    <string name="calculate">CALCULATE</string>
    <string name="average">Average Speed (km/h)</string>
    <string name="required">Distance and time are required</string>
    <string name="morezero">Time must be greater than zero</string>
    <string name="more">Speed is over limit!</string>

</resources>